# PSN_singlecell

./: README.md  session_info.txt
taskserver-master/: .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  README.rst  WELCOME.md  pyproject.toml  setup.cfg  setup.py  taskserver.ipynb  tox.ini
taskserver-master/.gitlab/issue_templates/: 问题.md
taskserver-master/docs/: Makefile  make.bat
taskserver-master/docs/source/: conf.py  contents.rst  index.rst  installation.rst  usage.rst
taskserver-master/scripts/: demo.py  demo.sh  oerm_task  oesc_change_string_colors.py  oesc_data_prepare.py  oesc_email.py  oesc_ppi.py  oesc_screenshot.py  oesc_sor.py  oesc_stlearn_SMEclust.py  oesc_stlearn_cci.py  oesc_stlearn_cci_allLR.py  oesc_stlearn_psd.py  oesc_task  oest_data_prepare.py  oest_sor_upload.py  oest_task  sor_upload_visium.py
taskserver-master/taskserver/: __init__.py  __main__.py  cli.py  core.py  items.py  settings.py
taskserver-master/taskserver/datasets/: output.json.tsv
taskserver-master/taskserver/pipeline/: run_DiffusionMap.py  run_GeneSwitches.py  run_MIA.py  run_Nichenet.py  run_QC.py  run_SCENIC.py  run_Scorpius.py  run_Velocity.py  run_Volcano.py  run_bclust.py  run_beforeQC.py  run_beforeQC_txy.py  run_cellchat.py  run_cellcycle.py  run_cellphoneDB.py  run_cellranger.py  run_cellranger_aggr.py  run_celltyping.py  run_correlation.py  run_correxpress.py  run_corscatter.py  run_diffexp.py  run_email_sor.py  (+24 more)
taskserver-master/tests/: test_items.py  test_post.http  test_taskserver.py
(+827 files in other folders)
